// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Constructor": "RoutesSignupPage",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"signup-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--Logo-->
    <!--header-->
    <ul class=\\"errors-panel\\">
      <li>Signup fail</li>
    </ul>
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"form-group\\">
      <input name=\\"name\\" type=\\"text\\" placeholder=\\"Enter your username\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password2\\" type=\\"password\\" placeholder=\\"Confirm your password\\">
    </div>
    <!--default-->
    <button type=\\"submit\\">
      <!--if-->Sign Up
      <!--submit-->
    </button>
    <div class=\\"signup-label\\"> Already a member? <a href=\\"/\\"> Sign In </a>
    </div>
    <!--footer-->
  </form>
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "RoutesSignupPage",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"signup-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--Logo-->
    <!--header-->
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"form-group\\">
      <input name=\\"name\\" type=\\"text\\" placeholder=\\"Enter your username\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password2\\" type=\\"password\\" placeholder=\\"Confirm your password\\">
    </div>
    <!--default-->
    <button type=\\"submit\\">
      <!--if-->Sign Up
      <!--submit-->
    </button>
    <div class=\\"signup-label\\"> Already a member? <a href=\\"/\\"> Sign In </a>
    </div>
    <!--footer-->
  </form>
</div>
",
}
`;
